# IPAGE

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_api.txt
data/: .gitignore  Merged.csv  merged_v3_with_environmental_vars.csv
data/models/: Boron_Ridge  SOC_Ridge  Zinc_Ridge
notebooks/task_1_data_collection_and_preprocessing/by-Gideon/: geospacial_preprocessing.ipynb
notebooks/task_1_data_collection_and_preprocessing/by-Jamsheeda/: data_cleaning_old.ipynb  eda_old.ipynb
notebooks/task_1_data_collection_and_preprocessing/by-Taylor/: Preprocessing-by-Taylor.ipynb  iSDA-IPAGE-Preprocessing-by-Taylor.ipynb  iSDA_soil_data_sand_silt_clay.csv  ipage_final.csv  isda_final.csv  merged_v1.csv  merged_v2.csv
notebooks/task_1_data_collection_and_preprocessing/by-tasfiq/: geospatial_processing.ipynb  merged_v3.csv
notebooks/task_2_exploratory_data_analysis/: Preprocessed Merged IPAGE.csv
notebooks/task_2_exploratory_data_analysis/by-Abhishek/: EDA_merged_v2(zinc)_Abhishek.ipynb  EDA_merged_v2(zinc)_Abhishek_v2.ipynb
notebooks/task_2_exploratory_data_analysis/by-Anidipta/: Merged-CSV_EDA_IPAGE_Soil.ipynb
notebooks/task_2_exploratory_data_analysis/by-Jamsheeda/: eda.ipynb
notebooks/task_3_model_development_and_training/: README.md  iPAGE_Model_building.ipynb
src/api/: VERSION  app.py  configs.py  db.py  ipage.db  main.py  models.py  schema.py
src/app/: app.py
src/data/: load_data.py  preprocess_data.py
src/logs/: config.py  logger.py
src/model/: config.py  model.py
src/visualizations/: SWEETVIZ_REPORT.html
(+111 files in other folders)
