[tool.poetry]
name = "ipage"
version = "0.1.0"
description = ""
authors = ["Soham Das <144812467+tosoham@users.noreply.github.com>"]
readme = "README.md"
package-mode = false # For Dependency Management Only

[tool.poetry.dependencies]
# python = "^3.12"
python = ">=3.11,<3.14"
easydict = "^1.13"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
requests = "2.32.3"
numpy = "1.26.4"
openpyxl = "^3.1.5"
sweetviz = "^2.3.1"
plotly = "^5.24.1"
streamlit = "1.40.0"
tpot = "^0.12.2"
colorama = "^0.4.6"
dvc = "^3.58.0"
dvc-gdrive = "^3.0.1"
folium = "^0.19.2"
streamlit-folium = "^0.24.0"
catboost = "^1.2.7"
lightgbm = "^4.5.0"
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
geopy = "^2.4.1"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
pydantic-extra-types = "^2.10.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
notebook = "^7.2.2"
rich = "^13.9.4"
mlflow = "^2.19.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
